# trilium-alchemy

./: .coveragerc  .env.example  .gitignore  .python-version  README.md  README.pypi.md  SConstruct  docker-compose.yaml  dodo.py  noxfile.py  pyproject.toml  pytest.ini  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: conf.py  index.md  renderer.py  util.py
doc/_static/: custom.css  custom.js
doc/dev/: design.md  guide.md  roadmap.md
doc/dev/design/: entity-classes.plantuml  entity-state.plantuml  entity.plantuml  flush.plantuml  index.md
doc/dev/guide/: index.md
doc/dev/roadmap/: index.md  roadmap-gantt.plantuml
doc/getting-started/: installation.md  setup.md
doc/reference/: api.md  fs-spec.md
doc/sdk/: extensions.md  index.md  intro.md
doc/sdk/declarative-notes/: event-tracker.md  example.md  index.md  template-notes.md
doc/sdk/examples/: event-tracker.md
doc/sdk/guide/: declarative-notes.md  index.md  sync.md
doc/sdk/guide/working-with-notes/: attributes.md  branches.md  notes.md  sessions.md
doc/sdk/working-with-notes/: attributes.md  branches.md  index.md  notes.md  sessions.md
doc/source/: conf.py  index.md  renderer.py
doc/source/_static/: custom.js
doc/source/dev/: guide.md
doc/source/reference/: api.md
doc/source/sdk/examples/: event-tracker.md  index.md
doc/source/sdk/guide/: declarative-notes.md  extensions.md  filesystem-notes.md  intro.md
doc/source/sdk/guide/working-with-notes/: branches.md  index.md  sessions.md
doc/source/sdk/tutorials/: hello-world.md  index.md
doc/source/tools/trilium-sync/: index.md
doc/tools/: index.md
doc/tools/trilium-sync/: usage.md
example/event-tracker/: install.bat  install.sh
example/event-tracker/event_tracker/: __main__.py  root.py  setup.py
example/event-tracker/event_tracker/events/: events.py
example/event-tracker/event_tracker/events/assets/: formatEvents.js  getEventsByPlace.js
example/event-tracker/event_tracker/people/: people.py
example/event-tracker/event_tracker/places/: __init__.py  places.py
example/event-tracker/event_tracker/places/assets/: relatedEventsWidget.js
examples/event-tracker/event_tracker/: __main__.py  root.py  setup.py
examples/event-tracker/event_tracker/events/: __init__.py  events.py
examples/event-tracker/event_tracker/events/assets/: formatEvents.js  getEventsByPerson.js  getEventsByPlace.js
examples/event-tracker/event_tracker/people/: __init__.py  people.py
examples/event-tracker/event_tracker/people/assets/: relatedEventsWidget.js
examples/event-tracker/event_tracker/places/: places.py
examples/event-tracker/event_tracker/places/assets/: createRelation.js  relatedEventsWidget.js  residentsWidget.js
src/trilium_alchemy/: __init__.py
src/trilium_alchemy/core/: __init__.py  cache.py  exceptions.py  session.py  utils.py
src/trilium_alchemy/core/attribute/: __init__.py  attribute.py  label.py  relation.py
src/trilium_alchemy/core/branch/: __init__.py  branch.py
src/trilium_alchemy/core/declarative/: __init__.py  base.py  decorators.py
src/trilium_alchemy/core/entity/: __init__.py  entity.py  model.py  types.py
src/trilium_alchemy/core/note/: __init__.py  attachments.py  branches.py  content.py  extension.py  model.py  note.py  note_model.py
src/trilium_alchemy/core/note/attributes/: __init__.py  _filters.py  (+3 more)
src/trilium_alchemy/lib/: __init__.py  extension_types.py  note_types.py  system_types.py
src/trilium_alchemy/tools/: config.py  utils.py  yaml_model.py
src/trilium_alchemy/tools/cli/: _utils.py  db.py  fs.py  main.py  note.py  test.py  tree.py
src/trilium_alchemy/tools/fs/: meta.py  note.py  tree.py
test/: conftest.py  fs_utils.py  test_cli.py  test_import.py  test_session.py  test_sorter.py
test/attribute/: test_accessors.py  test_helpers.py  test_inherited.py  test_owned.py
test/branch/: test_accessors.py  test_branch.py  test_helpers.py
test/declarative/: test_abstract.py  test_content.py  test_mixin.py  test_singleton.py  test_template.py
test/declarative/files/: test.html
test/examples/: __init__.py  test_attributes.py  test_branches.py  test_declarative.py  test_event_tracker.py  test_note.py
test/ext/: test_system.py
test/lib/: test_system.py
test/note/: test_attachments.py  test_attributes.py  test_content.py  test_fs.py  test_note.py  test_note_attributes.py
test/note/fs-dump/note1/: meta.yaml
test/note/fs-dump/note_1/: meta.yaml
test/tools/: fs_utils.py  test_cli.py  test_fs.py
test/tools/fs-dumps/note-1/: meta.yaml
test/tools/operation-specs/: pull-label-fs.yaml  pull-label-zip.yaml  push-fs-label.yaml  push-py-label.yaml  push-zip-label.yaml  readme.txt
test/tools/sync/config/: push-git-label.yaml  push-label-zip.yaml  push-py-label.yaml  push-zip-label.yaml  sync-folder-label.yaml  sync-folder-py.yaml
trilium_alchemy/: __init__.py  _rollup.py
trilium_alchemy/cli/: _utils.py  db.py  main.py  tree.py
trilium_alchemy/core/: __init__.py  cache.py  declarative.py  exceptions.py  session.py  utils.py
trilium_alchemy/core/attribute/: __init__.py  attribute.py  label.py  relation.py
trilium_alchemy/core/branch/: __init__.py  branch.py
trilium_alchemy/core/declarative/: __init__.py  base.py  decorators.py
trilium_alchemy/core/entity/: __init__.py  entity.py  model.py  types.py
trilium_alchemy/core/note/: __init__.py  _fs.py  attributes.py  branches.py  content.py  extension.py  model.py  note.py
trilium_alchemy/core/note/attributes/: __init__.py  _filters.py  attributes.py  labels.py  relations.py
trilium_alchemy/ext/: __init__.py  helpers.py  types.py
trilium_alchemy/lib/: __init__.py  extension_types.py  note_types.py  system_types.py
trilium_alchemy/lib/assets/: system.css
trilium_alchemy/sync/: __init__.py  notes.txt
trilium_alchemy/tools/: __init__.py  config.py  fs.py  utils.py  yaml_model.py
trilium_alchemy/tools/cli/: __main__.py  _utils.py  db.py  fs.py  main.py  note.py  test.py  tree.py
trilium_alchemy/tools/fs/: meta.py  note.py  tree.py
trilium_alchemy/tools/sync/: __main__.py
trilium_alchemy/tools/tester/: __main__.py
(+18 files in other folders)
