[project]
authors = [
  {name = "mm21", email = "mm21.dev@gmail.com"}
]
classifiers = [
  # Get the list of trove classifiers here: https://pypi.org/classifiers/
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
description = "Python SDK and CLI toolkit for TriliumNext Notes, compatible with Trilium Notes"
name = "trilium-alchemy"
readme = "README.pypi.md"
version = "0.7.0"

[project.urls]
documentation = "https://mm21.github.io/trilium-alchemy/"
homepage = "https://github.com/mm21/trilium-alchemy"

[tool.poetry]
packages = [{include = "trilium_alchemy"}]

[tool.poetry.scripts]
trilium-alchemy = "trilium_alchemy.tools.cli.main:run"

[tool.poetry.dependencies]
pydantic = "^2"
pyrollup = "^0.1.0"
python = "^3.12"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
requests = "^2.31.0"
trilium-client = "^0.1.2"
typer = "^0.15.2"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^23.3.0"
doit = "^0.36.0"
furo = "^2023.5.20"
genbadge = {extras = ["all"], version = "^1.1.0"}
isort = "^5.13.2"
mypy = {extras = ["reports"], version = "^1.5.1"}
myst-parser = "^2.0.0"
pexpect = "^4.9.0"
pyright = "^1.1.329"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.5.1"
python-dotenv = "^1.0.0"
sphinx = "^7.0.1"
sphinx-autodoc2 = {git = "https://github.com/mm21/sphinx-autodoc2.git"}
sphinx-copybutton = "^0.5.2"
sphinxcontrib-plantuml = "^0.25"
sphinxcontrib-typer = "^0.5.1"
toml-sort = "^0.23.1"
tox = "^4.24.2"
types-requests = "^2.31.0.8"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s -v -rA"
testpaths = "test"

[tool.coverage.run]
data_file = "__out__/test/.coverage"
source = ["trilium_alchemy"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "\\.\\.\\.$",
  "\\.\\.\\."
]

[tool.black]
line-length = 80

[tool.doit]
verbosity = 2

[tool.isort]
line_length = 80
profile = "black"

[tool.tomlsort]
no_sort_tables = true
sort_table_keys = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
