[project]
authors = [
  {name = "mm21", email = "mm21.dev@gmail.com"}
]
classifiers = [
  # Get the list of trove classifiers here: https://pypi.org/classifiers/
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2,<3",
  "pyrollup>=0.1.0,<0.2.0",
  "python-dotenv>=1.0.1,<2",
  "pyyaml>=6.0.2,<7",
  "requests>=2.31.0,<3",
  "trilium-client>=0.1.2,<0.2.0",
  "typer>=0.15.2,<0.16.0"
]
description = "Python SDK and CLI toolkit for TriliumNext Notes, compatible with Trilium Notes"
license = "AGPL-3.0-only"
name = "trilium-alchemy"
readme = "README.pypi.md"
requires-python = ">=3.12,<4"
version = "0.7.1"

[project.urls]
documentation = "https://mm21.github.io/trilium-alchemy/"
homepage = "https://github.com/mm21/trilium-alchemy"

[project.scripts]
trilium-alchemy = "trilium_alchemy.tools.cli.main:run"

[dependency-groups]
dev = [
  "autoflake>=2.3.1,<3",
  "black>=23.3.0,<24",
  "doit>=0.36.0,<0.37.0",
  "furo>=2023.5.20,<2024",
  "genbadge[all]>=1.1.0,<2",
  "isort>=5.13.2,<6",
  "mypy[reports]>=1.5.1,<2",
  "myst-parser>=2.0.0,<3",
  "pexpect>=4.9.0,<5",
  "pyright>=1.1.329,<2",
  "pytest>=7.3.1,<8",
  "pytest-cov>=4.1.0,<5",
  "pytest-dependency>=0.5.1,<0.6.0",
  "python-dotenv>=1.0.0,<2",
  "sphinx>=7.0.1,<8",
  "sphinx-autodoc2 @ git+https://github.com/mm21/sphinx-autodoc2.git",
  "sphinx-copybutton>=0.5.2,<0.6.0",
  "sphinxcontrib-plantuml>=0.25,<0.26",
  "sphinxcontrib-typer>=0.5.1,<0.6.0",
  "toml-sort>=0.23.1,<0.24.0",
  "tox>=4.24.2,<5",
  "types-requests>=2.31.0.8,<3"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -s -v -rA"
testpaths = "test"

[tool.coverage.run]
data_file = "__cache__/.coverage"
source = ["trilium_alchemy"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "\\.\\.\\.$"
]

[tool.black]
line-length = 80

[tool.doit]
verbosity = 2

[tool.isort]
line_length = 80
profile = "black"

[tool.tomlsort]
no_sort_tables = true
sort_table_keys = true

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12.0"]
